--- a/src/components/DoctorProfileH/Faq.css
+++ b/src/components/DoctorProfileH/Faq.css
@@ -9,6 +9,11 @@
   /* width: 65%; */
   margin-bottom: 50px;
 }
+.faq-icon {
+  font-size: 20px;
+  margin-left: 10px;
+  cursor: pointer;
+}
 
 .faq-title {
   font-size: 1.5rem;
@@ -71,7 +76,12 @@
   color: #38bdf8; /* sky-400 */
   cursor: pointer;
 }
-
+.faq-answer-doctor{
+  position: relative;
+  top: 30px;
+  left: -330px;
+  width: 200px;
+}
 .faq-answer {
   z-index: 20;
   position: absolute;
