--- a/src/components/DoctorProfile/doctorProfile.css
+++ b/src/components/DoctorProfile/doctorProfile.css
@@ -1,3 +1,44 @@
+.minimal-dropdown-doctor select {
+  position: relative;
+  top: 50px;
+  left: 180px;
+  padding: 10px 10px;
+  border: 1px solid #ccc; /* Light gray border for minimal look */
+  border-radius: 8px;
+  font-size: 14px;
+  background-color: white;
+  color: #333; /* Darker text for readability */
+  appearance: none; /* Remove default dropdown arrow */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  outline: none;
+  cursor: pointer;
+  box-shadow: none;
+  width: 100%; /* Full width */
+  transition: border-color 0.3s ease-in-out; /* Smooth focus transition */
+}
+.minimal-dropdown-doctor select:focus {
+  border-color: #007bff; /* Border color change on focus */
+}
+
+.minimal-dropdown-doctor {
+  position: relative;
+  width: 150px; /* Adjust this to fit the container */
+}
+
+/* Custom dropdown arrow */
+.minimal-dropdown-doctor::after {
+  content: '▼';
+  color: #ff7f50;
+  position: absolute;
+  top: 65px;
+  left: 310px;
+  
+  font-size: 12px;
+  color: #888; /* Light arrow color */
+  pointer-events: none;
+}
+
 .doctor-profile{
   width: 100%;
     max-width: 100%;
@@ -493,6 +534,7 @@ font-family: 'Matter', sans-serif;
 font-size: 13px;
 font-weight: 600;
 line-height: 25px;
+z-index: 9999;
 
 /* color: #FFFFFF; */
 
