--- a/src/components/patientBlog/BlogPage.css
+++ b/src/components/patientBlog/BlogPage.css
@@ -15,7 +15,7 @@
 .blog-sidebar {
     width: 37%;
     height: 900px;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     box-shadow: 4px 5px 5px 3px gainsboro;
     padding: 20px;
     border-radius: 8px;
