--- a/src/components/patientBlog/blog.css
+++ b/src/components/patientBlog/blog.css
@@ -664,7 +664,7 @@
   gap: 30px;
   margin-top: 3vw;
   /* background-color: yellow; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .blogPageDoctorCard {
