--- a/src/components/login/VerifyLogin.css
+++ b/src/components/login/VerifyLogin.css
@@ -1,6 +1,6 @@
-.form-overall-container-login{
+.form-overall-container-login-verify{
     position: relative;
-    top: -80px;
+    top: -30px;
   
   }
   
@@ -31,10 +31,10 @@
   
   
   
-  .model-header-login{
+  .model-header-login-verify{
     width: 287px;
     height: 22px;
-    top: 120px;
+    top: 160px;
     left: 39%;
     font-family: 'Matter', sans-serif;
     font-size:26px;
@@ -46,10 +46,10 @@
     border-bottom: none;
     display: flex;
   }
-  .model-header-sub-login{
+  .model-header-sub-login-verify{
   width: 287px;
   height: 22px;
-  top: 140px;
+  top: 180px;
   left: 39%;
   font-family: 'Matter', sans-serif;
   font-size: 16px;
@@ -102,14 +102,14 @@
   }
   
   @media (max-width: 412px) {
-    .form-overall-container-login{
+    .form-overall-container-login-verify{
       position: relative;
       top: 10px;
       width: 100%;
       padding: 0 10px;
       box-sizing: border-box;
     }
-    .model-header-login{
+    .model-header-login-verify{
       width: 100%;
       height: 39px;
       top: 70px;
@@ -123,7 +123,7 @@
       justify-content: center;
       text-align: center;
     }
-    .model-header-sub-login{
+    .model-header-sub-login-verify{
       position: relative;
       width: 100%;
       height: 22px;
@@ -158,14 +158,14 @@
     }
   }
   @media (min-width:413px) and (max-width: 600px) {
-    .form-overall-container-login{
+    .form-overall-container-login-verify{
       position: relative;
       top: 10px;
       width: 100%;
       padding: 0 10px;
       box-sizing: border-box;
     }
-    .model-header-login{
+    .model-header-login-verify{
       width: 100%;
       height: 39px;
       top: 70px;
@@ -179,7 +179,7 @@
       justify-content: center;
       text-align: center;
     }
-    .model-header-sub-login{
+    .model-header-sub-login-verify{
       position: relative;
       width: 100%;
       height: 22px;
@@ -219,14 +219,14 @@
     }
   }
   @media (min-width:601px) and (max-width: 767px) {
-    .form-overall-container-login{
+    .form-overall-container-login-verify{
       position: relative;
       top: -60px;
       width: 100%;
       padding: 0 10px;
       box-sizing: border-box;
     }
-    .model-header-login{
+    .model-header-login-verify{
       width: 100%;
       height: 39px;
       top: 70px;
@@ -240,7 +240,7 @@
       justify-content: center;
       text-align: center;
     }
-    .model-header-sub-login{
+    .model-header-sub-login-verify{
       position: relative;
       width: 100%;
       height: 22px;
@@ -278,14 +278,14 @@
     }
   }
   @media (min-width:768px) and (max-width: 1023px) {
-    .form-overall-container-login{
+    .form-overall-container-login-verify{
       position: relative;
       top: -80px;
       width: 100%;
       padding: 0 10px;
       box-sizing: border-box;
     }
-    .model-header-login{
+    .model-header-login-verify{
       width: 100%;
       height: 39px;
       top: 70px;
@@ -299,7 +299,7 @@
       justify-content: center;
       text-align: center;
     }
-    .model-header-sub-login{
+    .model-header-sub-login-verify{
       position: relative;
       width: 100%;
       height: 22px;
@@ -339,15 +339,15 @@
     }
   }
   @media (min-width:1024px) and (max-width: 1439px) {
-    .form-overall-container-login{
+    .form-overall-container-login-verify{
       position: relative;
-      top: -120px;
+      top: -60px;
       left: 20%;
     }
-    .model-header-login{
+    .model-header-login-verify{
       width: 100%;
       height: auto;
-      top: 10vh;
+      top: 110px;
       left: 57.5%;
       font-family: 'Matter', sans-serif;
       font-size: 2vw;
@@ -357,11 +357,11 @@
       justify-content: left;
       text-align: left;
     }
-    .model-header-sub-login{
+    .model-header-sub-login-verify{
       position: relative;
       width: 100%;
       height: auto;
-      top: 12vh;
+      top: 130px;
       left: 57.5%;
       font-family: 'Matter', sans-serif;
       font-size: 1.5vw;
@@ -370,6 +370,44 @@
       display: flex;
       text-align: left;
     }
+    
+.running-container-verify{
+  position: relative;
+  top: 30px !important;
+left: -199px !important;
+}
+  
+  .curvedesign-verify {
+    width: 565px;
+    height: 117px;
+    margin-left: auto;
+    margin-right: auto;
+    left: -36%; 
+    top: 200px;
+    justify-content: center;
+  }
+  
+  .running-text-verify {
+    width: 205px;
+    height: 22px;
+    top: 125px;
+    left: -36%;
+    font-family: Matter;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 19.2px;
+    text-align: left;
+    color: #272848;
+    white-space: nowrap;
+margin-left: auto;
+justify-content: center;
+margin-right: auto;
+
+
+  }
+  
+  
+
     .or-sign-up-container-login{
       display: flex;
   
@@ -416,14 +454,14 @@
     }
   }
   @media (min-width: 1500px) {
-    .form-overall-container-login{
+    .form-overall-container-login-verify{
       position: relative;
-      top: 40px;
+      top: 90px;
       width: 100%;
       padding: 0 10px;
       box-sizing: border-box;
     }
-    .model-header-login{
+    .model-header-login-verify{
       width: 100%;
       height: 39px;
       top: 140px;
@@ -436,7 +474,7 @@
     
       text-align: left;
     }
-    .model-header-sub-login{
+    .model-header-sub-login-verify{
       position: relative;
       width: 100%;
       height: 22px;
