--- a/src/components/ProfileItem/DashboardAll/Pages/Blog/blogs.css
+++ b/src/components/ProfileItem/DashboardAll/Pages/Blog/blogs.css
@@ -12,10 +12,11 @@
 .dashboard-page-item-review-head .review-scroll{}*/
 
 .blogs-cnt {
-  width: 100%;
-  display: flex;
+  width: 80%;
+  /* display: flex; */
   justify-content:center;
   align-items:flex-start;
+  margin-left: 10%;
   gap:20px;
 }
 
