--- a/src/components/ProfileItem/DashboardAll/Pages/Blog/blogs.css
+++ b/src/components/ProfileItem/DashboardAll/Pages/Blog/blogs.css
@@ -16,7 +16,7 @@
   /* display: flex; */
   justify-content:center;
   align-items:flex-start;
-  margin-left: 10%;
+  /* margin-left: 10%; */
   gap:20px;
 }
 
